# speedometer-qt

./: CMakeLists.txt  README.md
desktop/client/: CMakeLists.txt
desktop/client/include/: canvas.h  comservice.h  serialportservice.h  tcpservice.h  window.h
desktop/client/res/: resources.qrc
desktop/client/src/: canvas.cpp  comservice.cpp  serialportservice.cpp  tcpservice.cpp  window.cpp
desktop/server/: CMakeLists.txt
desktop/server/include/: comservice.h  serialportservice.h
desktop/server/src/: comservice.cpp  serialportservice.cpp  tcpservice.cpp  window.cpp
esp32/client/: CMakeLists.txt
esp32/server/: CMakeLists.txt  platformio.ini
shared/: setting.h
